--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-  "rewrites": [
-    { 
-      "source": "/api/(.*)", 
-      "destination": "/api" 
-    },
-    { 
-      "source": "/(.*)", 
-      "destination": "/api/$1" 
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
